# takoyaki

./: .gitattributes  .gitignore  README.md  default.toml  lib.rs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  my-plugin-has-been-removed.md  plugin-request.md
.github/workflows/: rust.yml  takoyaki_core.yml
plugins/: plugins.json
plugins/github/: Cargo.toml  README.md  takoyaki.plugin.toml  test.json
plugins/github/src/: main.rs  plugin.rs  types.rs
plugins/gitlab/: Cargo.toml
scripts/: install.sh
service/: takoyaki.service
takoyaki_bin/: Cargo.toml
takoyaki_bin/src/: daemon.rs  helpers.rs  initer.rs  logger.rs  main.rs  metadata.rs  path.rs  plug.rs  refresh.rs  unplug.rs  use_plugin.rs
takoyaki_bin/src/commands/: daemon.rs  init.rs  mod.rs  plug.rs  refresh.rs  run.rs  unplug.rs
takoyaki_bin/src/utils/: command.rs  errors.rs  helpers.rs  log.rs  metadata.rs  mod.rs
takoyaki_bot/: .eslintrc.js  .gitignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml
takoyaki_bot/src/: index.ts
takoyaki_core/: '  .gitignore  Cargo.toml  ]
takoyaki_core/.temp/: another_cache.json  cache.json
takoyaki_core/src/: cache.rs  config.rs  errors.rs  helpers.rs  lib.rs  plugin.rs  printable_grid.rs  ready_state.rs  state.rs  takoyaki.rs  takoyaki_core.rs  test_utils.rs
takoyaki_core/src/test_util/: mod.rs  test_utils.rs
takoyaki_core/src/tests/: utils.rs
takoyaki_core/src/utils/: cache.rs  config.rs  dir.rs  error.rs  hinter.rs  mod.rs  path_highligher.rs  printable_grid.rs  ready_state.rs  result.rs  state.rs  takoyaki_config.rs
takoyaki_plugin_builder/: .gitignore  Cargo.toml
takoyaki_plugin_builder/src/: builder.rs  logger.rs  main.rs
takoyaki_plugin_deployer/: Cargo.toml  \  out.txt
takoyaki_plugin_deployer/src/: builder.rs  deploy.rs  error.rs  logger.rs  main.rs  message.rs  server.rs  setup.rs  state.rs  {}
takoyaki_plugin_deployer/src/commands/: auth.rs  base.rs  deploy.rs  mod.rs
takoyaki_plugin_deployer/src/middleware/: auth_check.rs  base.rs  mod.rs
takoyaki_plugin_deployer/src/middlewares/: auth.rs  mod.rs
takoyaki_plugin_deployer/src/route/: deploy.rs  mod.rs  poll.rs
takoyaki_plugin_deployer/src/utils/: deploy.rs  deployer.rs  error.rs  execute.rs  executor.rs  logger.rs  message.rs  mod.rs  server.rs  setup.rs  state.rs
takoyaki_website/: .prettierrc  .temp.1667572037125.tailwind.config.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
takoyaki_website/src/: App.vue  main.ts
takoyaki_website/src/assets/: main.sass
takoyaki_website/src/components/: Feature.astro  Feature.vue  Lock.vue  NavBar.astro  NavBar.vue  Plus.astro  Plus.vue
takoyaki_website/src/layouts/: Layout.astro
takoyaki_website/src/pages/: index.astro
takoyaki_website/src/router/: index.ts
takoyaki_website/src/views/: Deploy.vue  HomeView.vue  Marketplace.vue  New.vue
website/: '  .eslintrc.cjs  LICENSE  README.md  index.html  package.json  tailwind.config.js
website/public/docs/: creating-plugin.md  docs.json  getting-started.md  initializing-takoyaki.md  ready-function.md
website/src/: App.vue  main.ts
website/src/assets/: main.sass
website/src/components/: NavBar.vue  SideBar.vue
website/src/router/: index.ts
website/src/views/: Documentation.vue  Documentation_Empty.vue  HomeView.vue  Install.vue  Marketplace.vue  Me.vue  NewPlugin.vue  Plugin.vue
