[package]
name = "takoyaki"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.18"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "4.0.0"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
throbber = "0.1"
inquire = "0.4.0"

