[package]
name = "takoyaki_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
snafu = "0.7.3"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.87"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }

