[package]
name = "takoyaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.87"
colored = "2.0.0"
colorsys = "0.6.6"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }

