[package]
name = "takoyaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
toml = "0.5.9"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }

