[package]
name = "takoyaki_plugin_deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.21.2", features = ["full"] }
futures-channel = "0.3.25"
futures-util = "0.3.25"
tungstenite = "0.17.3"
sha2 = "0.10.6"
base64 = "0.13.1"
chrono = "0.4.23"
colored = "2"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
