[package]
name = "takoyaki_plugin_deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
anyhow = "1.0.66"
chrono = "0.4.23"
colored = "2.0.0"
lazy_static = "1.4.0"
tungstenite = "0.17.3"
tokio-tungstenite = "0.17.2"
futures-channel = "0.3.25"
futures-util = "0.3.25"
async-trait = "0.1.58"
reqwest = { version = "0.11", features = ["json"] }
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

