[package]
name = "takoyaki_plugin_deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
tokio = { version = "1.22.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rocket_cors = "0.5.2"
either = { version = "1.8.0", features = ["serde"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

